<resources>
    <string name="app_name">Tugas_1_dicoding</string>
    <string name="text_user">Email or Username</string>
    <string name="text_pass">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="app_logo">test</string>
    <string name="email">Email</string>
    <string name="masukan_password">Password</string>
    <string name="test">test</string>
    <string name="masukan_email">Email</string>
    <string name="password">Password</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar">Daftar</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="masukan_kembali_password">Masukan kembali Password</string>
    <string name="sudah_memiliki_akun">Sudah memiliki akun ?</string>
    <string name="masuk">Masuk</string>
    <string name="masukkan_email_untuk_mengatur_ulang_password">Masukkan email untuk mengatur ulang password</string>
    <string name="kirim">Kirim</string>
    <string name="name">Name</string>
    <string name="todo">TODO</string>
    <string name="location_format">Latitude: %1$s, Longitude: %2$s</string>
    <string name="upload_post">Upload Post</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="x">TODO</string>
    <string name="image_desc">asd</string>
</resources>