<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:paddingTop="40dp"
    android:id="@+id/password_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="?android:attr/windowBackground"
    tools:context=".RegisterActivity">

    <!-- Logo -->
    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/test"
        android:src="@drawable/ic_launcher_foreground"
        tools:ignore="ImageContrastCheck" />

    <!-- Title -->
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lupa_password"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginTop="24dp"
        android:layout_gravity="center_horizontal" />

    <!-- Instruction Text -->
    <TextView
        android:id="@+id/instructionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/masukkan_email_untuk_mengatur_ulang_password"
        android:textSize="14sp"
        android:textColor="#000000"
        android:layout_marginTop="24dp"
        android:layout_gravity="center_horizontal" />

    <!-- Email Input -->
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/edittext_border"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#1976D2"
        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    <!-- Send Button -->
    <Button
        android:id="@+id/sendButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/kirim"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:backgroundTint="#2196F3"
        android:layout_marginTop="32dp"
        android:elevation="4dp"
        android:letterSpacing="0.1"
        android:fontFamily="sans-serif-medium"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>